--- a/styles.css
+++ b/styles.css
@@ -1826,6 +1826,10 @@ body.class-sign-up-page {
 
 /* SEO Page 01 - What is Brazilian Jiu-Jitsu BJJ */
 
+#blog-page {
+  background-color: yellowgreen;
+}
+
 body#blog-page .logo {
   margin: 0 auto;
 }
