SEO - updating page titles, placing keyword at the front of title

--- a/styles.css
+++ b/styles.css
@@ -2236,7 +2236,7 @@ body#blog-page main {
   /* 404 Error Page */
   .error-404-outer-container {
     display: grid;
-    height: 100vh;
+    /* height: 100vh; */
     /* height: 100%; */
     position: relative;
   }
