SEO - adding internal links on blogs to class pages

--- a/styles.css
+++ b/styles.css
@@ -2041,9 +2041,9 @@ section.shadow-boxing iframe {
   margin-top: 3rem;
 }
 
-section.conclusion {
+/* section.conclusion {
   margin-top: 23rem;
-}
+} */
 
 /* Tablet Layout */
 @media screen and (min-width: 48rem) and (max-width: 53rem) {
